; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Mednafen/mednafen-1.21/src/mpcdec/extr_mpc_bits_reader.c_mpc_bits_get_size.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Mednafen/mednafen-1.21/src/mpcdec/extr_mpc_bits_reader.c_mpc_bits_get_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mpc_bits_get_size(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i8, align 1
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  store i32 0, i32* %6, align 4
  store i32 0, i32* %7, align 4
  br label %8

8:                                                ; preds = %19, %2
  %9 = load i32*, i32** %3, align 8
  %10 = call zeroext i8 @mpc_bits_read(i32* %9, i32 8)
  store i8 %10, i8* %5, align 1
  %11 = load i32, i32* %6, align 4
  %12 = shl i32 %11, 7
  %13 = load i8, i8* %5, align 1
  %14 = zext i8 %13 to i32
  %15 = and i32 %14, 127
  %16 = or i32 %12, %15
  store i32 %16, i32* %6, align 4
  %17 = load i32, i32* %7, align 4
  %18 = add i32 %17, 1
  store i32 %18, i32* %7, align 4
  br label %19

19:                                               ; preds = %8
  %20 = load i8, i8* %5, align 1
  %21 = zext i8 %20 to i32
  %22 = and i32 %21, 128
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %8, label %24

24:                                               ; preds = %19
  %25 = load i32, i32* %6, align 4
  %26 = load i32*, i32** %4, align 8
  store i32 %25, i32* %26, align 4
  %27 = load i32, i32* %7, align 4
  ret i32 %27
}

declare dso_local zeroext i8 @mpc_bits_read(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
